# forsus

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
forsus/: main.py
forsus/sinan/: sinan_pull
forsus/sinan/config/: settings.json
