[tool.poetry]
name = "forsus"
version = "0.1.0"
description = "Methods for collecting data from DATASUS."
authors = ["Pedro de Sá <pedrodesa42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
