[tool.poetry]
name = "forsus"
version = "0.1.0"
description = "Methods for collecting data from DATASUS."
authors = ["Pedro de Sá <pedrodesa42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^6.0.0"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.3"
mkdocstrings = "^0.28.0"
mkdocstrings-python = "^1.14.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=forsus -vv"
post_test = "coverage html"